Created CSS and grid styling

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="style.css"/>
         <title>Imperial Footwear</title>
     </head>
     <body>
-        <div>
-            <header>
-                Imperial Footwear
+        <div class="grid-container">
+            <header class="header">
+                <div class="main-logo">
+                    <a href="index.html">Imperial Footwear</a>
+                </div>
+                <div class="header-buttons">
+                    <a href="creataccount.html">Create Account</a>
+                    <a href="signin.html">Sign In</a>
+                    <a href="shoppingcart.html">Shopping Cart</a>
+                </div>
             </header>
             <aside>
                 Brands
             </aside>
-            <main>
+            <main class="main">
                 <ul>
                     <li> Product 1 </li>
                     <li> Product 2 </li>
@@ -20,7 +28,7 @@
                     <li> Product 5 </li>
                 </ul>
             </main>
-            <footer>
+            <footer class="footer">
                 @hugonzb
             </footer>
         </div>
