Added images folder

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,16 +17,20 @@
                 </div>
             </header>
             <aside>
-                Brands
             </aside>
             <main class="main">
-                <ul>
-                    <li> Product 1 </li>
-                    <li> Product 2 </li>
-                    <li> Product 3 </li>
-                    <li> Product 4 </li>
-                    <li> Product 5 </li>
-                </ul>
+                <div class="content-display">
+                    <ul class="all-footwear">
+                        <li> 
+                            <div class="single-footwear">
+                                <img src="../templates/images/jordan1.jpg">
+                                <div class="shoe-name">Jordan 1 Bloodline</div>
+                                <div class="shoe-brand">Jordan</div>
+                                <div class="shoe-price">$300</div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
             </main>
             <footer class="footer">
                 @hugonzb
