--- a/templates/style.css
+++ b/templates/style.css
@@ -26,6 +26,7 @@ body{
     justify-content: space-between;
     background-color: rgb(1, 1, 66);
     align-items: center;
+    padding: 0.5rem;
 }
 
 .main{
@@ -34,16 +35,27 @@ body{
 
 .footer{
     grid-area: footer;
+    display: flex;
+    background-color: rgb(1, 1, 66);
+    justify-content: center;
+    align-items: center;
+    color: white;
 }
 
 .main-logo a{
     color: oldlace;
     font-size: 2.5rem;
     font-weight: bold;
+    text-decoration: none;
 }
 
 .header-buttons a{
     color: oldlace;
     font-size: 1rem;
     font-weight: bold;
+    text-decoration: none;
+}
+
+.header-buttons a:hover{
+    color:red;
 }
