Created footwear component CSS display

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,11 +22,51 @@
                 <div class="content-display">
                     <ul class="all-footwear">
                         <li> 
-                            <div class="single-footwear">
-                                <img src="../templates/images/jordan1.jpg">
-                                <div class="shoe-name">Jordan 1 Bloodline</div>
+                            <div class="footwear">
+                                <img class="shoe-image" src="../templates/images/jordan1.jpg" alt="bloodline">
+                                <div class="shoe-name">
+                                    <a href="shoe.html">Jordan 1 Bloodline</a>
+                                </div>
                                 <div class="shoe-brand">Jordan</div>
+                                <div class="shoe-year">2019</div>
                                 <div class="shoe-price">$300</div>
+                                <div class="shoe-rating">10 stars</div>
+                            </div>
+                        </li>
+                        <li> 
+                            <div class="footwear">
+                                <img class="shoe-image" src="../templates/images/jordan1.jpg" alt="bloodline">
+                                <div class="shoe-name">
+                                    <a href="shoe.html">Jordan 1 Bloodline</a>
+                                </div>
+                                <div class="shoe-brand">Jordan</div>
+                                <div class="shoe-year">2019</div>
+                                <div class="shoe-price">$300</div>
+                                <div class="shoe-rating">10 stars</div>
+                            </div>
+                        </li>
+                        <li> 
+                            <div class="footwear">
+                                <img class="shoe-image" src="../templates/images/jordan1.jpg" alt="bloodline">
+                                <div class="shoe-name">
+                                    <a href="shoe.html">Jordan 1 Bloodline</a>
+                                </div>
+                                <div class="shoe-brand">Jordan</div>
+                                <div class="shoe-year">2019</div>
+                                <div class="shoe-price">$300</div>
+                                <div class="shoe-rating">10 stars</div>
+                            </div>
+                        </li>
+                        <li> 
+                            <div class="footwear">
+                                <img class="shoe-image" src="../templates/images/jordan1.jpg" alt="bloodline">
+                                <div class="shoe-name">
+                                    <a href="shoe.html">Jordan 1 Bloodline</a>
+                                </div>
+                                <div class="shoe-brand">Jordan</div>
+                                <div class="shoe-year">2019</div>
+                                <div class="shoe-price">$300</div>
+                                <div class="shoe-rating">10 stars</div>
                             </div>
                         </li>
                     </ul>
