--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,9 @@
         <div class="grid-container">
             <header class="header">
                 <div class="main-logo">
+                    <button>
+                        &#9776;
+                    </button>
                     <a href="index.html">Imperial Footwear</a>
                 </div>
                 <div class="header-buttons">
@@ -16,8 +19,6 @@
                     <a href="shoppingcart.html">Shopping Cart</a>
                 </div>
             </header>
-            <aside>
-            </aside>
             <main class="main">
                 <div class="content-display">
                     <ul class="all-footwear">
