--- a/templates/style.css
+++ b/templates/style.css
@@ -53,6 +53,32 @@ body{
     cursor: pointer;
 }
 
+.sidebar-menu{
+    position: fixed;
+    transform: translateX(-30rem);
+    width: 30rem;
+    background-color: darkgray;
+    height: 50%;
+}
+
+.sidebar-menu.open{
+    transform: translateX(0);
+}
+
+.sidebar-close{
+    border-radius: 50%;
+    border: .1rem red;
+    width: 3rem;
+    height: 3rem;
+    padding: .5rem;
+    font-size: 2rem;
+    padding-top: 0;
+    cursor: pointer;
+    position: absolute;
+    right: .5rem;
+    top: .5rem
+}
+
 .header-buttons a{
     color: oldlace;
     font-size: 1rem;
