--- a/front-end-display/src/index.css
+++ b/front-end-display/src/index.css
@@ -49,7 +49,7 @@ body{
   padding: .5rem;
   background: none;
   border: none;
-  color: red;
+  color: white;
   cursor: pointer;
 }
 
@@ -58,8 +58,14 @@ body{
   transition: all 0.6s;
   transform: translateX(-30rem);
   width: 30rem;
-  background-color: white;
-  height: 50%;
+  background-color: black;
+  height: 100%;
+}
+
+.sidebar-name{
+  font-size: 3rem;
+  color: white;
+  font-weight: bold;
 }
 
 .sidebar-menu.open{
@@ -75,6 +81,8 @@ body{
   padding: .5rem;
   font-size: 2rem;
   padding-top: 0;
+  color: white;
+  background-color: red;
   cursor: pointer;
   position: absolute;
   right: .5rem;
