--- a/front-end-display/src/index.css
+++ b/front-end-display/src/index.css
@@ -115,10 +115,10 @@ body{
 .all-footwear li{
   list-style-type: none;
   padding: 0;
-  flex: 0 1 34rem;
+  flex: 0 1 22rem;
   margin: 1rem;
   height: 32.5rem;
-  border-bottom: .1rem #c0c0c0 solid;
+  border: 0.1rem lightgrey solid;
 }
 
 .footwear{
@@ -126,10 +126,11 @@ body{
   flex-direction: column;
   justify-content: space-between;
   height: 80%;
+  border-width: 1rem;
 }
 
 .shoe-name{
-  font-size: 3rem;
+  font-size: 2rem;
   font-weight: bold;
 }
 
