--- a/front-end-display/src/index.css
+++ b/front-end-display/src/index.css
@@ -45,6 +45,7 @@ body{
 }
 
 .main-logo button{
+  margin-right: 1rem;
   font-size: 2rem;
   padding: .5rem;
   background: none;
@@ -91,9 +92,11 @@ body{
 
 .header-buttons a{
   color: oldlace;
-  font-size: 1rem;
+  font-size: 1.5rem;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-weight: bold;
   text-decoration: none;
+  margin-right:2rem;
 }
 
 .header-buttons a:hover{
@@ -115,7 +118,7 @@ body{
 .all-footwear li{
   list-style-type: none;
   padding: 0;
-  flex: 0 1 22rem;
+  flex: 0 1 23rem;
   margin: 1rem;
   height: 32.5rem;
   border: 0.1rem lightgrey solid;
