--- a/front-end-display/src/index.css
+++ b/front-end-display/src/index.css
@@ -173,3 +173,57 @@ body{
 }
 
 /* Styling for shoe details (when user clicks on a shoe) */
+
+.shoe-details{
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  padding: 1rem;
+}
+
+.shoe-detailed-image{
+  flex: 2 1 60rem;
+}
+
+.shoe-detailed-image img{
+  max-width: 60rem;
+  widows: 100%;
+  border: grey solid;
+}
+
+.shoe-detailed-info{
+  flex: 1 1 55rem;
+  border: .1rem dimgray solid;
+  border-radius: 0.5rem;
+  margin-right: 1rem;
+}
+
+.shoe-detailed-actions{
+  flex: 1 1 30rem;
+  border: .1rem grey solid;
+  border-radius: .5rem;
+  background-color: lightgray;
+  padding: 1rem;
+}
+
+.shoe-detailed-info li, .shoe-detailed-actions li{
+  list-style-type: none;
+  padding: 0;
+  margin: 1rem;
+}
+
+.shoe-detailed-back{
+  padding: 1rem;
+}
+
+.shoe-purchase-button{
+  padding: 1rem;
+  border: .1rem dimgray solid;
+  border-radius: 0.5rem;
+  cursor: pointer;
+}
+
+.shoe-purchase-button:hover{
+  border: .1rem rgb(44, 44, 44) solid;
+}
