--- a/front-end-display/src/index.css
+++ b/front-end-display/src/index.css
@@ -138,12 +138,13 @@ body{
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+  margin-right: 4rem;
 }
 
 .all-footwear li{
   list-style-type: none;
   padding: 0;
-  flex: 0 1 23rem;
+  flex: 1 1 20rem;
   margin: 1rem;
   height: 32.5rem;
   border: 0.1rem lightgrey solid;
@@ -155,6 +156,18 @@ body{
   justify-content: space-between;
   height: 80%;
   border-width: 1rem;
+}
+
+.shoe-info{
+  min-height: 16rem;
+  margin-bottom: 1rem;
+  margin-top:1rem;
+  border-top: rgb(201, 199, 199) solid;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: rgb(224, 224, 224);
 }
 
 .shoe-name{
@@ -176,12 +189,9 @@ body{
 }
 
 .shoe-image{
-  max-width: 24rem;
-  max-height: 24rem;
-}
-
-.shoe-rating{
-  margin-bottom: 1rem;
+  margin-left: 2rem;
+  max-width: 20rem;
+  max-height: 13rem;
 }
 
 .footer{
@@ -197,35 +207,45 @@ body{
 
 .shoe-details{
   display: flex;
-  justify-content: space-between;
   align-items: flex-start;
-  flex-wrap: wrap;
   padding: 1rem;
+  flex-wrap: wrap;
+}
+
+.shoe-detailed-box{
+  display: flex;
+  flex-direction: column;
+  max-height:60rem;
 }
 
 .shoe-detailed-image{
-  flex: 2 1 60rem;
+  flex: 0 0 30rem;
 }
 
 .shoe-detailed-image img{
-  max-width: 60rem;
+  max-width: 50rem;
   widows: 100%;
   border: grey solid;
 }
 
 .shoe-detailed-info{
-  flex: 1 1 55rem;
+  flex: 1 0 30rem;
   border: .1rem dimgray solid;
   border-radius: 0.5rem;
-  margin-right: 1rem;
+  display: flex;
+  max-width: 50rem;
+  max-height: 16rem;
 }
 
 .shoe-detailed-actions{
-  flex: 1 1 30rem;
+  flex: 1 0 30rem;
   border: .1rem grey solid;
   border-radius: .5rem;
   background-color: lightgray;
   padding: 1rem;
+  min-width:48rem;
+  display: flex;
+  max-height: 15rem;
 }
 
 .shoe-detailed-info li, .shoe-detailed-actions li{
