Styling for nav bar

--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
                     <ul class="all-footwear">
                         <li> 
                             <div class="footwear">
-                                <img class="shoe-image" src="../templates/images/jordan1.jpg" alt="bloodline">
+                                <img class="shoe-image" src="../front-end-display/public/images/nike.png" alt="bloodline">
                                 <div class="shoe-name">
                                     <a href="shoe.html">Jordan 1 Bloodline</a>
                                 </div>
