--- a/front-end-display/src/index.css
+++ b/front-end-display/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap");
+
 html{
   font-size: 62.5%;
   box-sizing: border-box;
@@ -19,6 +21,18 @@ body{
   font: 1.6rem Helvetica;
   height: 100vh;
   margin: 0;
+}
+
+body::-webkit-scrollbar {
+  width: 0.5rem;
+}
+
+body::-webkit-scrollbar-track {
+  background: darkgrey;
+}
+
+body::-webkit-scrollbar-thumb {
+  background:  rgb(1, 1, 66);
 }
 
 .grid-container{
@@ -63,14 +77,17 @@ body{
   transition: all 0.6s;
   transform: translateX(-30rem);
   width: 30rem;
-  background-color: black;
+  background-color: lightgrey;
   height: 100%;
 }
 
 .sidebar-name{
   font-size: 3rem;
-  color: white;
+  color: rgb(78, 75, 75);
   font-weight: bold;
+  letter-spacing: 0.3ch;
+  text-transform: uppercase;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .sidebar-menu.open{
@@ -94,6 +111,10 @@ body{
   top: .5rem
 }
 
+.sidebar-close:hover{
+  background-color: black;
+}
+
 .sidebar-nav {
   list-style: none;
   padding: 0;
@@ -103,8 +124,14 @@ body{
   align-items: center;
 }
 
-.siderbar-logo {
-  width: 100%;
+.sidebar-button{
+  cursor: pointer;
+  width: 30rem;
+  background-color: black;
+}
+
+.sidebar-button:hover{
+  background-color: rgb(24, 24, 24);
 }
 
 .sidebar-link {
