--- a/front-end-display/src/index.css
+++ b/front-end-display/src/index.css
@@ -13,10 +13,6 @@ a{
   height: 100%;
 }
 
-a:hover{
-  color: red;
-}
-
 body{
   font: 1.6rem Helvetica;
   height: 100vh;
@@ -186,8 +182,11 @@ body::-webkit-scrollbar-thumb {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 80%;
-  border-width: 1rem;
+  height: 100%;
+}
+
+.footwear:hover{
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .shoe-info{
@@ -197,7 +196,9 @@ body::-webkit-scrollbar-thumb {
   border-top: rgb(201, 199, 199) solid;
   padding: 1rem;
   display: flex;
+  color: black;
   flex-direction: column;
+  text-decoration: none;
   justify-content: space-between;
   background-color: rgb(224, 224, 224);
 }
@@ -205,6 +206,8 @@ body::-webkit-scrollbar-thumb {
 .shoe-name{
   font-size: 2rem;
   font-weight: bold;
+  color: black;
+  text-decoration: none;
 }
 
 .shoe-brand{
