Start Sign in tab

--- a/front-end-display/src/index.css
+++ b/front-end-display/src/index.css
@@ -334,3 +334,6 @@ body::-webkit-scrollbar-thumb {
 .shoe-purchase-button:hover{
   border: .1rem rgb(44, 44, 44) solid;
 }
+
+/* Sign In Components */
+
