--- a/front-end-display/src/index.css
+++ b/front-end-display/src/index.css
@@ -337,3 +337,33 @@ body::-webkit-scrollbar-thumb {
 
 /* Sign In Components */
 
+.form{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 100%;
+}
+
+.form-container{
+  display: flex;
+  flex-direction: column;
+  width: 32rem;
+  align-items: center;
+  padding: 2rem;
+  border: .1rem #c0c0c0 solid;
+  border-radius: .5rem;
+  list-style-type: none;
+}
+
+.form-container li{
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1rem;
+}
+
+input{
+  padding: 1rem;
+  border: .1rem #c0c0c0 solid;
+  border-radius: .5rem;
+}
