--- a/front-end-display/src/index.css
+++ b/front-end-display/src/index.css
@@ -189,7 +189,6 @@ body::-webkit-scrollbar-thumb {
   flex: 1 1 20rem;
   margin: 1rem;
   height: 32.5rem;
-  border: 0.1rem lightgrey solid;
 }
 
 .footwear{
@@ -198,6 +197,7 @@ body::-webkit-scrollbar-thumb {
   justify-content: space-between;
   height: 100%;
   background-color: white;
+  max-width: 30rem;
 }
 
 .footwear:hover{
@@ -277,7 +277,7 @@ body::-webkit-scrollbar-thumb {
 .shoe-detailed-box{
   display: flex;
   flex-direction: column;
-  max-height:60rem;
+  max-height: 60rem;
 }
 
 .shoe-detailed-image{
