--- a/front-end-display/src/index.css
+++ b/front-end-display/src/index.css
@@ -267,31 +267,50 @@ body::-webkit-scrollbar-thumb {
 
 /* Styling for shoe details (when user clicks on a shoe) */
 
+.shoe-container{
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  min-width: 0;
+}
+
 .shoe-details{
   display: flex;
   align-items: center;
   padding: 1rem;
   flex-wrap: wrap;
-  padding-left: 5%;
+  min-width: 0;
 }
 
 .shoe-detailed-box{
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
   max-height: 60rem;
+  min-width: 0;
 }
 
 .shoe-detailed-image{
-  flex: 2 1 60rem;
+  flex-wrap: wrap;
+  flex: 1 2 50%;
   width: 100%;
-  height: 100%;
+  min-width: 0;
+  min-height: 0;
   max-width: 70rem;
   max-height: 70rem;
+  overflow: hidden;
+  margin-right: 1rem;
 }
 
 .shoe-detailed-image img{
   width: 100%;
+  min-width: 0;
+  max-width: 70em;
+  min-width: 0;
+  min-height: 0;
   max-width: 70rem;
+  max-height: 70rem;
+  overflow: hidden;
   display: flex;
   border: grey solid;
 }
