--- a/front-end-display/src/index.css
+++ b/front-end-display/src/index.css
@@ -268,18 +268,20 @@ body::-webkit-scrollbar-thumb {
 /* Styling for shoe details (when user clicks on a shoe) */
 
 .shoe-container{
+  justify-content: center;
   display: flex;
   align-items: center;
   flex-wrap: wrap;
-  min-width: 0;
+  width: 90%;
+  margin-left: 1rem;
 }
 
 .shoe-details{
   display: flex;
+  width: 100%;
   align-items: center;
   padding: 1rem;
   flex-wrap: wrap;
-  min-width: 0;
 }
 
 .shoe-detailed-box{
@@ -287,30 +289,26 @@ body::-webkit-scrollbar-thumb {
   flex-direction: column;
   flex-wrap: wrap;
   max-height: 60rem;
-  min-width: 0;
+  width: 100%;
+  max-width: 60rem;
 }
 
 .shoe-detailed-image{
+  justify-content: center;
   flex-wrap: wrap;
   flex: 1 2 50%;
   width: 100%;
-  min-width: 0;
-  min-height: 0;
   max-width: 70rem;
   max-height: 70rem;
-  overflow: hidden;
-  margin-right: 1rem;
+  margin-left: 1rem;
+  margin-bottom: 1rem;
 }
 
 .shoe-detailed-image img{
   width: 100%;
-  min-width: 0;
-  max-width: 70em;
-  min-width: 0;
-  min-height: 0;
-  max-width: 70rem;
-  max-height: 70rem;
-  overflow: hidden;
+  min-width: 45rem;
+  max-width: 62rem;
+  max-height: 62rem;
   display: flex;
   border: grey solid;
 }
@@ -320,8 +318,9 @@ body::-webkit-scrollbar-thumb {
   border: .1rem dimgray solid;
   border-radius: 0.5rem;
   display: flex;
-  max-width: 50rem;
-  padding: 2rem;
+  min-width: 40rem;
+  width: 100%;
+  padding: 1rem;
   margin: .5rem;
   max-height: 20rem;
 }
@@ -332,7 +331,8 @@ body::-webkit-scrollbar-thumb {
   border-radius: .5rem;
   background-color: lightgray;
   padding: 1rem;
-  min-width:48rem;
+  min-width:40rem;
+  width: 100%;
   display: flex;
   margin: .5rem;
   max-height: 15rem;
