--- a/front-end-display/src/index.css
+++ b/front-end-display/src/index.css
@@ -186,7 +186,7 @@ body::-webkit-scrollbar-thumb {
 .all-footwear li{
   list-style-type: none;
   padding: 0;
-  flex: 1 1 20rem;
+  flex: 1 1 25rem;
   margin: 1rem;
   height: 32.5rem;
 }
@@ -197,11 +197,12 @@ body::-webkit-scrollbar-thumb {
   justify-content: space-between;
   height: 100%;
   background-color: white;
-  max-width: 30rem;
+  width: 100%;
+  max-width: 25rem;
 }
 
 .footwear:hover{
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 0 8px 10px 0 rgba(0, 0, 0, 0.2), 0 10px 30px 0 rgba(0, 0, 0, 0.19);
 }
 
 .shoe-info{
