--- a/front-end-display/src/index.css
+++ b/front-end-display/src/index.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Cairo:wght@600&family=News+Cycle&family=Raleway&display=swap");
 
 html{
   font-size: 62.5%;
@@ -17,7 +18,7 @@ body{
   font: 1.6rem Helvetica;
   height: 100vh;
   margin: 0;
-  background-color: rgb(185, 185, 185);
+  background-color: rgb(194, 191, 191);
 }
 
 body::-webkit-scrollbar {
@@ -199,6 +200,8 @@ body::-webkit-scrollbar-thumb {
   background-color: white;
   width: 100%;
   max-width: 25rem;
+  font-family: 'Cairo', sans-serif;
+  border: rgb(40, 0, 148) solid 0.5px;
 }
 
 .footwear:hover{
@@ -216,7 +219,7 @@ body::-webkit-scrollbar-thumb {
   flex-direction: column;
   text-decoration: none;
   justify-content: space-between;
-  background-color: rgb(117, 117, 143);
+  background-color: rgb(180, 180, 206);
 }
 
 .shoe-info-detailed{
@@ -230,7 +233,8 @@ body::-webkit-scrollbar-thumb {
 }
 
 .shoe-name{
-  font-size: 2rem;
+  font-size: 2.3rem;
+  line-height: 1;
   font-weight: bold;
   color: black;
   text-decoration: none;
@@ -238,6 +242,7 @@ body::-webkit-scrollbar-thumb {
 
 .shoe-brand{
   font-size: 1.5rem;
+  line-height: 1.2;
 }
 
 .shoe-year{
