--- a/front-end-display/src/index.css
+++ b/front-end-display/src/index.css
@@ -1,3 +1,4 @@
+/* Font imports */
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Cairo:wght@600&family=News+Cycle&family=Raleway&display=swap");
 
