--- a/front-end-display/src/index.css
+++ b/front-end-display/src/index.css
@@ -281,6 +281,7 @@ body::-webkit-scrollbar-thumb {
   flex-wrap: wrap;
   width: 86.5%;
   min-width: 0;
+  margin-left: 5%;
 }
 
 .shoe-details{
@@ -326,6 +327,7 @@ body::-webkit-scrollbar-thumb {
   border-radius: 0.5rem;
   display: flex;
   min-width: 10rem;
+  min-height: 30rem;
   width: 95%;
   padding: 1rem;
   margin: .5rem;
