--- a/front-end-display/src/index.css
+++ b/front-end-display/src/index.css
@@ -27,7 +27,7 @@ body::-webkit-scrollbar {
 }
 
 body::-webkit-scrollbar-track {
-  background: darkgrey;
+  background: black;
 }
 
 body::-webkit-scrollbar-thumb {
@@ -210,6 +210,7 @@ body::-webkit-scrollbar-thumb {
   width: 8rem;
   text-decoration: none;
   display: block;
+  text-align: center;
 }
 
 .dropdown-content a:hover {
@@ -220,6 +221,21 @@ body::-webkit-scrollbar-thumb {
 .dropdown:hover .dropdown-content {
   display: block;
   width: 10.5rem;
+}
+
+.logout-button {
+  width: 10.5rem;
+  height: 4rem;
+  border: none;
+  cursor: pointer;
+  font-size: 1.5rem;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bold;
+}
+
+.logout-button:hover {
+  background-color: #ddd;
+  color: red;
 }
 
 .main{
