--- a/front-end-display/src/index.css
+++ b/front-end-display/src/index.css
@@ -355,6 +355,70 @@ body::-webkit-scrollbar-thumb {
 
 /* Shoe Reviews */
 
+.form-content-container {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  list-style-type: none;
+  border-radius: 0.5rem;
+  border: .1rem rgb(196, 195, 195) solid;
+  padding: 5rem;
+  background-color: rgb(235, 233, 233);
+  min-width: 10rem;
+  max-width: 100rem;
+  width: 100%;
+  margin-left: 1rem;
+}
+
+.content-margined {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  list-style-type: none;
+  border-radius: 0.5rem;
+  background-color: rgb(235, 233, 233);
+  min-width: 10rem;
+  max-width: 20rem;
+  width: 100%;
+}
+
+.review-form{
+  border-radius: 0.5rem;
+  border: 0.1rem rgb(8, 8, 8) solid;
+  padding-right: 4rem;
+  width: 20rem;
+  list-style-type: none;
+  background-color: rgb(226, 226, 226);
+}
+
+.form-review ul{
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+}
+.form-review li{
+  display: flex;
+  flex-direction: column;
+  margin-top: 1rem;
+  min-height: 5rem;
+  max-width: 30rem;
+}
+
+.review-signin-message{
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bold;
+}
+
+.form-rating{
+  width: 10%;
+  border: 1rem red solid;
+}
+
 ul.review {
   list-style-type: none;
   padding: 0;
@@ -372,7 +436,7 @@ ul.review {
 /* Shoe Rating */
 
 .rating span {
-  color: rgb(232, 250, 71);
+  color: rgb(255, 252, 49);
   font-size: 2.3rem;
   margin: 0.1rem;
 }
@@ -434,9 +498,10 @@ a > .rating > span:last-child {
   flex-wrap: wrap;
   flex: 1 2 60rem;
   width: 100%;
+  min-width: 22.5rem;
   max-width: 70rem;
   max-height: 70rem;
-  margin-left: 1rem;
+  margin-left: 0.5rem;
   margin-bottom: 1rem;
 }
 
