--- a/front-end-display/src/index.css
+++ b/front-end-display/src/index.css
@@ -2,6 +2,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Cairo:wght@600&family=News+Cycle&family=Raleway&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Michroma&family=Montserrat+Subrayada:wght@700&family=Quicksand:wght@500&family=Rubik+Mono+One&display=swap");
+
 
 html{
   font-size: 62.5%;
@@ -137,8 +139,8 @@ body::-webkit-scrollbar-thumb {
   justify-content: center;
   align-items: center;
   min-height: 6rem;
-  color: white;
-  font-family: 'Montserrat', sans-serif;
+  color: rgb(250, 246, 246);
+  font-family: 'Michroma', sans-serif;  
   font-weight: bold;
   font-size: 1.5rem;
 }
