--- a/front-end-display/src/index.css
+++ b/front-end-display/src/index.css
@@ -245,6 +245,11 @@ body::-webkit-scrollbar-thumb {
   grid-area: main;
 }
 
+.search {
+  width: 100%;
+  max-width: 14rem;
+}
+
 .filter{
   display: flex;
   list-style-type: none;
@@ -329,7 +334,7 @@ body::-webkit-scrollbar-thumb {
   flex-direction: column;
   text-decoration: none;
   justify-content: space-between;
-  background-color: rgb(180, 180, 206);
+  background-color: rgb(150, 167, 197);
 }
 
 .shoe-info-detailed{
