fixed deploy error

--- a/front-end-display/src/index.css
+++ b/front-end-display/src/index.css
@@ -392,7 +392,7 @@ body::-webkit-scrollbar-thumb {
   min-width: 10rem;
   max-width: 108rem;
   width: 100%;
-  margin-left: 1rem;
+  margin-right: 3%;
 }
 
 .content-margined {
@@ -526,7 +526,7 @@ a > .rating > span:last-child {
   min-width: 22.5rem;
   max-width: 64rem;
   max-height: 60rem;
-  margin-left: 5%;
+  margin-left: 3%;
   margin-top: 3rem;
 }
 
