--- a/front-end-display/src/index.css
+++ b/front-end-display/src/index.css
@@ -392,7 +392,6 @@ body::-webkit-scrollbar-thumb {
   min-width: 10rem;
   max-width: 108rem;
   width: 100%;
-  margin-right: 3%;
 }
 
 .content-margined {
@@ -515,7 +514,7 @@ a > .rating > span:last-child {
   max-height: 60rem;
   width: 100%;
   max-width: 54rem;
-  margin-right: 0rem;
+  margin-left: 1rem;
   margin-top: 3%;
 }
 
