--- a/front-end-display/src/index.css
+++ b/front-end-display/src/index.css
@@ -49,16 +49,38 @@ body::-webkit-scrollbar-thumb {
 }
 
 .header{
+  overflow: hidden;
   grid-area: header;
   display: flex;
   justify-content: space-between;
   background-color: black;
   align-items: center;
-  padding: 1rem;
+  padding: 3rem;
+}
+
+.header-buttons a {
+  text-align: center;
+  text-decoration: none;
+  color: white;
+  font-size: 18px; 
+  line-height: 25px;
+  border-radius: 4px;
+  padding: 12px;
+  background-color: rgb(37, 37, 37);
+}
+
+.header a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.header a.active {
+  background-color: dodgerblue;
+  color: white;
 }
 
 .main-logo a{
-  color: oldlace;
+  color: rgb(252, 251, 250);
   font-size: 2.5rem;
   font-weight: bold;
   text-decoration: none;
@@ -187,14 +209,17 @@ body::-webkit-scrollbar-thumb {
 }
 
 .dropdown .dropdown-button {
-  font-size: 16px;  
   border: none;
   outline: none;
   font-family: 'Montserrat', sans-serif;
   background-color: black;
   color: oldlace;
   font-weight: bold;
-  font-size: 1.5rem;
+  font-size: 18px; 
+  line-height: 25px;
+  border-radius: 4px;
+  padding: 8px;
+  background-color: rgb(37, 37, 37);
 }
 
 .dropdown-content {
