--- a/front-end-display/src/index.css
+++ b/front-end-display/src/index.css
@@ -37,46 +37,43 @@ body::-webkit-scrollbar-thumb {
   background:  rgb(1, 1, 66);
 }
 
-.grid-container{
-  display: grid;
-  grid-template-areas:
-  "header"
-  "main"
-  "footer";
-  grid-template-columns: 1fr;
-  grid-template-rows: 5rem 1fr 5rem;
-  height: 100%;
-}
-
 .header{
   overflow: hidden;
-  grid-area: header;
   display: flex;
   justify-content: space-between;
   background-color: black;
-  align-items: center;
-  padding: 3rem;
+  align-content: center;
+  padding: 1rem;
+  padding-top: 2rem;
 }
 
 .header-buttons a {
-  text-align: center;
-  text-decoration: none;
   color: white;
-  font-size: 18px; 
-  line-height: 25px;
   border-radius: 4px;
   padding: 12px;
   background-color: rgb(37, 37, 37);
+  float: right;
+  max-height: 5rem;
+  margin-bottom: 0.8rem;
 }
 
-.header a:hover {
-  background-color: #ddd;
-  color: black;
+.header-buttons a{
+  color: oldlace;
+  font-size: 1.5rem;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bold;
+  text-decoration: none;
+  margin-right:2rem;
 }
 
-.header a.active {
-  background-color: dodgerblue;
-  color: white;
+.header-buttons a:hover{
+  color:rgb(250, 232, 232);
+  background-color: rgb(65, 63, 63);
+}
+
+.main-logo{
+  display: flex;
+  align-content: center;
 }
 
 .main-logo a{
@@ -87,15 +84,41 @@ body::-webkit-scrollbar-thumb {
   font-family: 'Montserrat', sans-serif;
 }
 
+.if-logo {
+  margin-top: 0.5rem;
+}
+
 .main-logo button{
   margin-right: 1rem;
-  font-size: 2rem;
+  font-size: 2.2rem;
   padding: .5rem;
   background: none;
   border: none;
   color: white;
   cursor: pointer;
 }
+
+@media screen and (max-width: 500px) {
+  .header a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  
+  .header-buttons {
+    float: none;
+  }
+
+  .main-logo{
+    display: flex;
+    align-content: center;
+    margin-top: 6rem;
+  }
+  .if-logo {
+    margin-top: 0;
+  }
+}
+
 
 .sidebar-menu{
   position: fixed;
@@ -188,18 +211,6 @@ body::-webkit-scrollbar-thumb {
   text-decoration: none;
 }
 
-.header-buttons a{
-  color: oldlace;
-  font-size: 1.5rem;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: bold;
-  text-decoration: none;
-  margin-right:2rem;
-}
-
-.header-buttons a:hover{
-  color:red;
-}
 
 .dropdown {
   float: left;
@@ -215,35 +226,44 @@ body::-webkit-scrollbar-thumb {
   background-color: black;
   color: oldlace;
   font-weight: bold;
-  font-size: 18px; 
+  font-size: 1.5rem; 
   line-height: 25px;
   border-radius: 4px;
-  padding: 8px;
+  padding: 9px;
   background-color: rgb(37, 37, 37);
+  margin-right: 1rem;
+  min-width: 13rem;
+  text-align: left;;
 }
 
 .dropdown-content {
-  margin-top: .1rem;
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
-  width: 8rem;
+  max-width: 8rem;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 
 .dropdown-content a {
   float: none;
-  color: black;
-  padding: 12px 12px;
-  width: 8rem;
+  color: white;
+  padding: 8px 8px;
+  width: 9rem;
+  margin-bottom: 0;
   text-decoration: none;
+  background-color: grey;
   display: block;
+  min-width: 11.5rem;
   text-align: center;
 }
 
 .dropdown-content a:hover {
-  background-color: #ddd;
+  background-color: rgb(65, 63, 63);
   width: 8rem;
+}
+
+.dropdown-button:hover{
+  color:rgb(250, 232, 232);
+  background-color: rgb(65, 63, 63);
 }
 
 .dropdown:hover .dropdown-content {
