--- a/front-end-display/src/index.css
+++ b/front-end-display/src/index.css
@@ -121,12 +121,12 @@ body::-webkit-scrollbar-thumb {
 
 
 .sidebar-menu{
-  position: fixed;
+  position: absolute;
   transition: all 0.6s;
   transform: translateX(-30rem);
   width: 30rem;
   background-color: rgb(44, 43, 43);
-  height: 100%;
+  height: 90%;
 }
 
 .sidebar-name{
@@ -233,14 +233,13 @@ body::-webkit-scrollbar-thumb {
   background-color: rgb(37, 37, 37);
   margin-right: 1rem;
   min-width: 13rem;
-  text-align: left;;
+  text-align: left;
 }
 
 .dropdown-content {
   display: none;
   position: absolute;
   max-width: 8rem;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 
 .dropdown-content a {
@@ -254,6 +253,7 @@ body::-webkit-scrollbar-thumb {
   display: block;
   min-width: 11.5rem;
   text-align: center;
+    border: 0.1rem black solid;
 }
 
 .dropdown-content a:hover {
@@ -272,18 +272,28 @@ body::-webkit-scrollbar-thumb {
 }
 
 .logout-button {
-  width: 10.5rem;
-  height: 4rem;
-  border: none;
-  cursor: pointer;
+  float: none;
+  color: white;
+  padding: 8px 8px;
+  width: 9rem;
+  margin-bottom: 0;
+  text-decoration: none;
+  background-color: grey;
+  display: block;
+  min-width: 13.3rem;
+  border-radius: 0.5rem;
+  text-align: center;
+  color: oldlace;
   font-size: 1.5rem;
   font-family: 'Montserrat', sans-serif;
   font-weight: bold;
+  border: 0.1rem black solid;
+  margin-right:2rem;
 }
 
 .logout-button:hover {
-  background-color: #ddd;
-  color: red;
+  color:rgb(250, 232, 232);
+  background-color: rgb(65, 63, 63);
 }
 
 .main{
