--- a/front-end-display/src/index.css
+++ b/front-end-display/src/index.css
@@ -55,9 +55,6 @@ body::-webkit-scrollbar-thumb {
   float: right;
   max-height: 5rem;
   margin-bottom: 0.8rem;
-}
-
-.header-buttons a{
   color: oldlace;
   font-size: 1.5rem;
   font-family: 'Montserrat', sans-serif;
@@ -232,8 +229,8 @@ body::-webkit-scrollbar-thumb {
   padding: 9px;
   background-color: rgb(37, 37, 37);
   margin-right: 1rem;
-  min-width: 13rem;
-  text-align: left;
+  min-width: 10rem;
+  text-align: center;
 }
 
 .dropdown-content {
@@ -246,14 +243,14 @@ body::-webkit-scrollbar-thumb {
   float: none;
   color: white;
   padding: 8px 8px;
-  width: 9rem;
+  width: 8rem;
   margin-bottom: 0;
   text-decoration: none;
   background-color: grey;
   display: block;
-  min-width: 11.5rem;
+  min-width: 8rem;
   text-align: center;
-    border: 0.1rem black solid;
+  border: 0.1rem black solid;
 }
 
 .dropdown-content a:hover {
@@ -275,12 +272,12 @@ body::-webkit-scrollbar-thumb {
   float: none;
   color: white;
   padding: 8px 8px;
-  width: 9rem;
+  width: 8rem;
   margin-bottom: 0;
   text-decoration: none;
   background-color: grey;
   display: block;
-  min-width: 13.3rem;
+  min-width: 9.8rem;
   border-radius: 0.5rem;
   text-align: center;
   color: oldlace;
@@ -303,6 +300,7 @@ body::-webkit-scrollbar-thumb {
 .search {
   width: 100%;
   max-width: 14rem;
+  margin-left: 1rem;
 }
 
 .filter{
@@ -325,6 +323,10 @@ body::-webkit-scrollbar-thumb {
   font-size: 1.6rem;
   list-style-type: none;
   outline: none;
+}
+
+.filter button{
+  margin-right: 1rem;
 }
 
 .filter input:focus{
