--- a/front-end-display/src/index.css
+++ b/front-end-display/src/index.css
@@ -25,6 +25,10 @@ body{
   background-color: rgb(245, 244, 244);
 }
 
+.content-display {
+  min-height: 55rem;
+}
+
 body::-webkit-scrollbar {
   width: 0.5rem;
 }
@@ -60,7 +64,7 @@ body::-webkit-scrollbar-thumb {
   font-family: 'Montserrat', sans-serif;
   font-weight: bold;
   text-decoration: none;
-  margin-right:2rem;
+  margin-right: 0.5rem;
 }
 
 .header-buttons a:hover{
@@ -124,11 +128,13 @@ body::-webkit-scrollbar-thumb {
   width: 30rem;
   background-color: rgb(44, 43, 43);
   height: 90%;
+  text-decoration: none;
+  border: 0.1rem rgb(8, 8, 8) solid;
 }
 
 .sidebar-name{
   font-size: 3rem;
-  color: rgb(197, 196, 196);
+  color: rgb(219, 219, 219);
   font-weight: bold;
   letter-spacing: 0.3ch;
   text-transform: uppercase;
@@ -138,6 +144,7 @@ body::-webkit-scrollbar-thumb {
 .sidebar-menu.open{
   transition: all 200ms ease;
   transform: translateX(0);
+  text-decoration: none;
 }
 
 .sidebar-close{
@@ -185,6 +192,7 @@ body::-webkit-scrollbar-thumb {
   font-family: 'Michroma', sans-serif;  
   font-weight: bold;
   font-size: 1.5rem;
+  text-decoration: none;
 }
 
 .sidebar-button img{
@@ -212,7 +220,7 @@ body::-webkit-scrollbar-thumb {
 .dropdown {
   float: left;
   overflow: hidden;
-  margin-right: 1rem;
+  margin-right: 0.5rem;
   min-height: 2rem;
 }
 
@@ -228,8 +236,7 @@ body::-webkit-scrollbar-thumb {
   border-radius: 4px;
   padding: 9px;
   background-color: rgb(37, 37, 37);
-  margin-right: 1rem;
-  min-width: 10rem;
+  min-width: 12rem;
   text-align: center;
 }
 
@@ -243,12 +250,12 @@ body::-webkit-scrollbar-thumb {
   float: none;
   color: white;
   padding: 8px 8px;
-  width: 8rem;
+  width: 10.4rem;
   margin-bottom: 0;
   text-decoration: none;
-  background-color: grey;
+  background-color: rgb(48, 48, 48);
   display: block;
-  min-width: 8rem;
+  min-width: 10.4rem;
   text-align: center;
   border: 0.1rem black solid;
 }
@@ -272,12 +279,12 @@ body::-webkit-scrollbar-thumb {
   float: none;
   color: white;
   padding: 8px 8px;
-  width: 8rem;
+  width: 12rem;
   margin-bottom: 0;
   text-decoration: none;
   background-color: grey;
   display: block;
-  min-width: 9.8rem;
+  min-width: 10rem;
   border-radius: 0.5rem;
   text-align: center;
   color: oldlace;
@@ -391,7 +398,7 @@ body::-webkit-scrollbar-thumb {
   flex-direction: column;
   text-decoration: none;
   justify-content: space-between;
-  background-color: rgb(150, 167, 197);
+  background-color: rgb(65, 106, 177);
 }
 
 .shoe-info-detailed{
@@ -533,7 +540,7 @@ a > .rating > span:last-child {
 /* Footer */
 
 .footer{
-  padding: 5rem;
+  padding: 3rem;
   grid-area: footer;
   display: flex;
   background-color: black;
