--- a/front-end-display/src/index.css
+++ b/front-end-display/src/index.css
@@ -49,10 +49,10 @@ body::-webkit-scrollbar-thumb {
   align-content: center;
   padding: 1rem;
   padding-top: 2rem;
+  max-height: 5rem;
 }
 
 .header-buttons a {
-  color: white;
   border-radius: 4px;
   padding: 12px;
   background-color: rgb(37, 37, 37);
@@ -70,6 +70,7 @@ body::-webkit-scrollbar-thumb {
 .header-buttons a:hover{
   color:rgb(250, 232, 232);
   background-color: rgb(65, 63, 63);
+  border-top: 0.2rem rgb(250, 5, 5) solid;
 }
 
 .main-logo{
@@ -100,6 +101,10 @@ body::-webkit-scrollbar-thumb {
 }
 
 @media screen and (max-width: 500px) {
+  .header {
+    max-height: 25rem;
+  }
+
   .header a {
     float: none;
     display: block;
@@ -113,10 +118,10 @@ body::-webkit-scrollbar-thumb {
   .main-logo{
     display: flex;
     align-content: center;
-    margin-top: 6rem;
+    margin-top: 5.5rem;
   }
   .if-logo {
-    margin-top: 0;
+    margin-top: -1rem;
   }
 }
 
@@ -129,7 +134,6 @@ body::-webkit-scrollbar-thumb {
   background-color: rgb(44, 43, 43);
   height: 90%;
   text-decoration: none;
-  border: 0.1rem rgb(8, 8, 8) solid;
 }
 
 .sidebar-name{
@@ -380,7 +384,7 @@ body::-webkit-scrollbar-thumb {
   width: 100%;
   max-width: 25rem;
   font-family: 'Cairo', sans-serif;
-  border: rgb(40, 0, 148) solid 0.5px;
+  border: rgb(46, 77, 134) solid 0.5px;
 }
 
 .footwear:hover{
@@ -398,7 +402,7 @@ body::-webkit-scrollbar-thumb {
   flex-direction: column;
   text-decoration: none;
   justify-content: space-between;
-  background-color: rgb(65, 106, 177);
+  background-color: rgb(172, 172, 196);
 }
 
 .shoe-info-detailed{
