--- a/front-end-display/src/index.css
+++ b/front-end-display/src/index.css
@@ -26,7 +26,7 @@ body{
 }
 
 .content-display {
-  min-height: 55rem;
+  min-height: 58rem;
 }
 
 body::-webkit-scrollbar {
@@ -34,11 +34,11 @@ body::-webkit-scrollbar {
 }
 
 body::-webkit-scrollbar-track {
-  background: black;
+  background: rgb(14, 13, 13);
 }
 
 body::-webkit-scrollbar-thumb {
-  background:  rgb(1, 1, 66);
+  background:  rgb(190, 190, 190);
 }
 
 .header{
@@ -70,7 +70,6 @@ body::-webkit-scrollbar-thumb {
 .header-buttons a:hover{
   color:rgb(250, 232, 232);
   background-color: rgb(65, 63, 63);
-  border-top: 0.2rem rgb(250, 5, 5) solid;
 }
 
 .main-logo{
@@ -98,31 +97,6 @@ body::-webkit-scrollbar-thumb {
   border: none;
   color: white;
   cursor: pointer;
-}
-
-@media screen and (max-width: 500px) {
-  .header {
-    max-height: 25rem;
-  }
-
-  .header a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-  
-  .header-buttons {
-    float: none;
-  }
-
-  .main-logo{
-    display: flex;
-    align-content: center;
-    margin-top: 5.5rem;
-  }
-  .if-logo {
-    margin-top: -1rem;
-  }
 }
 
 
@@ -402,7 +376,7 @@ body::-webkit-scrollbar-thumb {
   flex-direction: column;
   text-decoration: none;
   justify-content: space-between;
-  background-color: rgb(172, 172, 196);
+  background-color: rgb(189, 189, 218);
 }
 
 .shoe-info-detailed{
@@ -612,7 +586,7 @@ a > .rating > span:last-child {
   border-radius: 0.5rem;
   display: flex;
   min-width: 10rem;
-  min-height: 25rem;
+  min-height: 22rem;
   width: 95%;
   padding: 0.5rem;
   margin: .5rem;
@@ -649,14 +623,14 @@ a > .rating > span:last-child {
   max-height: 0.5rem;
 }
 
-.shoe-purchase-button{
+.submit-button{
   padding: 1rem;
   border: .1rem dimgray solid;
   border-radius: 0.5rem;
   cursor: pointer;
 }
 
-.shoe-purchase-button:hover{
+.submit-button:hover{
   border: .1rem rgb(44, 44, 44) solid;
 }
 
@@ -671,6 +645,7 @@ a > .rating > span:last-child {
 }
 
 .form-container{
+  margin-top: 8rem;
   display: flex;
   flex-direction: column;
   width: 32rem;
@@ -763,4 +738,38 @@ option[value=""][disabled] {
 }
 option {
   color: black;
+}
+
+@media screen and (max-width: 650px) {
+  .header {
+    max-height: 25rem;
+  }
+
+  .header a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+
+  .dropdown {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  
+  .header-buttons {
+    float: none;
+  }
+
+  .main-logo{
+    display: flex;
+    align-content: center;
+    margin-top: 5.5rem;
+  }
+  .if-logo {
+    margin-top: -1rem;
+  }
+  .shoe-detailed-info{
+    min-height: 25rem;
+  }
 }
