--- a/front-end-display/src/index.css
+++ b/front-end-display/src/index.css
@@ -749,7 +749,6 @@ input{
   display: flex;
   flex-wrap: wrap;
   margin: 1rem;
-  align-items: flex-start;
 }
 
 .cart-list{
@@ -763,6 +762,7 @@ input{
 
 .cart-list-container li{
   display: flex;
+  justify-content: space-between;
   padding-bottom: 1rem;
   margin-bottom: 1rem;
   border-bottom: .1rem #808080 solid;
@@ -784,7 +784,7 @@ input{
 
 .cart-item{
   display: flex;
-  max-width: 40rem;
+  max-width: 50rem;
 }
 
 .cart-image{
@@ -796,6 +796,9 @@ input{
   flex: 8 1;
   margin-bottom: 1.5rem;
   margin-top: 0.5rem;
+  color: rgb(21, 27, 107);
+  text-decoration: none;
+  font-size: 1.8rem;
 }
 
 .cart-colorway{
@@ -817,6 +820,22 @@ input{
   border-radius: 0.5rem;
   padding: 1rem;
   margin-top: 3rem;
+}
+
+.cart-buttons{
+  width: 10rem;
+}
+.cart-delete-button{
+  padding: 1rem;
+  border: .1rem rgb(238, 7, 7) solid;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  max-height: 5rem;
+  
+}
+
+.cart-delete-button:hover{
+  border: .1rem rgb(44, 44, 44) solid;
 }
 
 /* misc */
@@ -869,4 +888,12 @@ option {
   .shoe-detailed-info{
     min-height: 25rem;
   }
+  .cart-list-container img{
+    max-height: 10rem; 
+    max-width: 10rem;
+    border: .1rem rgb(117, 117, 117) solid;
+    border-radius: 0.5rem;
+    margin-top: 3rem;
+  }
+
 }
