--- a/front-end-display/src/index.css
+++ b/front-end-display/src/index.css
@@ -270,7 +270,7 @@ body::-webkit-scrollbar-thumb {
   display: block;
   min-width: 10.4rem;
   border-radius: 0.5rem;
-  text-align: center;
+  text-align: left;
   color: oldlace;
   font-size: 1.5rem;
   font-family: 'Montserrat', sans-serif;
@@ -824,14 +824,25 @@ input{
 
 .cart-buttons{
   width: 10rem;
+  padding-top: 1rem;
 }
+
 .cart-delete-button{
   padding: 1rem;
   border: .1rem rgb(238, 7, 7) solid;
   border-radius: 0.5rem;
   cursor: pointer;
-  max-height: 5rem;
-  
+  width: 10rem;
+  font-size: 15px;
+}
+
+.cart-quantity{
+  margin-top: 1rem;
+  padding: 0.5rem;
+  border: .1rem black solid;
+  border-radius: .5rem;
+  text-align: center;
+  font-size: 15px;
 }
 
 .cart-delete-button:hover{
@@ -882,6 +893,14 @@ option {
     align-content: center;
     margin-top: 5.5rem;
   }
+
+  .cart-info{
+    font-size: 13px;
+  }
+  .cart-name{
+    font-size: 13px;
+  }
+
   .if-logo {
     margin-top: -1rem;
   }
