--- a/front-end-display/src/index.css
+++ b/front-end-display/src/index.css
@@ -3,6 +3,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Cairo:wght@600&family=News+Cycle&family=Raleway&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Michroma&family=Montserrat+Subrayada:wght@700&family=Quicksand:wght@500&family=Rubik+Mono+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@600&display=swap");
 
 
 html{
@@ -270,7 +271,7 @@ body::-webkit-scrollbar-thumb {
   display: block;
   min-width: 10.4rem;
   border-radius: 0.5rem;
-  text-align: left;
+  text-align: center;
   color: oldlace;
   font-size: 1.5rem;
   font-family: 'Montserrat', sans-serif;
@@ -534,6 +535,8 @@ a > .rating > span:last-child {
   color: white;
   flex-direction: column;
   white-space: pre-line;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bold;
 }
 
 .footer img{
@@ -824,7 +827,7 @@ input{
 
 .cart-buttons{
   width: 10rem;
-  padding-top: 1rem;
+  padding-top: 2rem;
 }
 
 .cart-delete-button{
@@ -847,6 +850,19 @@ input{
 
 .cart-delete-button:hover{
   border: .1rem rgb(44, 44, 44) solid;
+}
+
+.cart-summary-header{
+  font-family: 'Quicksand', sans-serif;
+  font-weight: bold;
+  font-size: 25px;
+  margin-bottom: 1rem;
+}
+
+.cart-summary{
+  font-family: 'Quicksand', sans-serif;
+  font-weight: bold;
+  margin-bottom: 2rem;
 }
 
 /* misc */
@@ -874,7 +890,7 @@ option {
   .header a {
     float: none;
     display: block;
-    text-align: left;
+    text-align: center;
   }
 
   .dropdown {
@@ -885,7 +901,7 @@ option {
 
   .header-buttons a{
     float: none;
-    text-align: left;
+    text-align: center;
   }
 
   .main-logo{
